# what-the-rep

./: .env.example  .gitignore  MASTER_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/agent/: __init__.py
backend/db/: __init__.py  client.py
backend/db/models/: __init__.py  action.py  agenda_item.py  common.py  document.py  enums.py  governing_body.py  ingestion_run.py  jurisdiction.py  meeting.py  office.py  office_tenure.py  person.py  platform_adapter.py  topic.py  vote_record.py
backend/embeddings/: __init__.py
backend/ingestion/: __init__.py
backend/ingestion/adapters/: __init__.py  base.py  granicus.py
backend/ingestion/boundaries/: __init__.py  load.py  tiger.py
backend/ingestion/officials/: __init__.py  common.py  marin_county.py  (+2 more)
backend/mcp_server/: __init__.py  __main__.py  app.py  config.py
backend/tests/: conftest.py  test_action_vote_tally_integration.py  test_action_vote_tally_unit.py  test_db_integration.py  test_granicus_adapter.py  test_home_summary_integration.py  test_home_summary_unit.py  test_marin_seed.py  test_mcp_server_integration.py  test_mcp_ui_integration.py  test_models_validation.py  test_official_voting_history_integration.py  test_official_voting_history_unit.py  test_officials_integration.py  test_officials_parsers.py  test_pipeline_content_hash.py  test_pipeline_integration.py  test_pipeline_normalize.py  test_pipeline_resolve.py  test_rate_limiter.py  test_readonly_tools_integration.py  test_resolve_location_integration.py  test_resolve_location_unit.py  test_smoke.py
(+96 files in other folders)
