[project]
name = "what-the-rep-backend"
version = "0.0.0"
description = "What The Rep backend: FastMCP server, ingestion pipeline, and embeddings (scaffold)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastmcp>=2.0",
    "motor>=3.7.1",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

# No [build-system] on purpose: this is a "virtual" uv project used only for
# dependency management + running tests/scripts, not a distributable package.
# Source packages (mcp_server/, agent/, ingestion/, db/, embeddings/) are made
# importable by tests via the pytest `pythonpath` setting below.

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a running MongoDB instance",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
